<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>es.nivel36</groupId>
	<artifactId>laie</artifactId>
	<version>0.9.10-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>laie</name>
	<modules>
        <module>nivel36-login</module>
		<module>laie-ear</module>
		<module>laie-ejb</module>
		<module>laie-web</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>

		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>dd-MM-yyyy HH:mm</maven.build.timestamp.format>
		<laie.version>${project.version}</laie.version>

		<primefaces.version>12.0.0</primefaces.version>
		<poi.version>5.2.2</poi.version>
		<omnifaces.version>3.13.3</omnifaces.version>
		<commons-fileupload.version>1.4</commons-fileupload.version>
		<owasp-java-html-sanitizer.version>20200713.1</owasp-java-html-sanitizer.version>
		<html2pdf.version>3.0.5</html2pdf.version>

		<version.mockito>3.11.0</version.mockito>
		<version.server.bom>26.1.1.Final</version.server.bom>
		<version.junit.bom>5.7.2</version.junit.bom>

		<maven.ear.plugin.version>3.0.1</maven.ear.plugin.version>
		<maven.war.plugin.version>3.2.2</maven.war.plugin.version>
		<maven.ejb.plugin.version>3.0.1</maven.ejb.plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.wildfly.bom</groupId>
				<artifactId>wildfly-jakartaee8-with-tools</artifactId>
				<version>${version.server.bom}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.wildfly.bom</groupId>
				<artifactId>wildfly-microprofile</artifactId>
				<version>${version.server.bom}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${version.junit.bom}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.primefaces</groupId>
				<artifactId>primefaces</artifactId>
				<version>${primefaces.version}</version>
			</dependency>

			<dependency>
				<groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
				<artifactId>owasp-java-html-sanitizer</artifactId>
				<version>${owasp-java-html-sanitizer.version}</version>
			</dependency>

			<dependency>
				<groupId>org.omnifaces</groupId>
				<artifactId>omnifaces</artifactId>
				<version>${omnifaces.version}</version>
			</dependency>

			<!-- iText -->
			<dependency>
				<groupId>com.itextpdf</groupId>
				<artifactId>html2pdf</artifactId>
				<version>${html2pdf.version}</version>
			</dependency>

			<dependency>
				<groupId>es.nivel36</groupId>
				<artifactId>laie-ejb</artifactId>
				<version>${laie.version}</version>
				<type>ejb</type>
			</dependency>

			<dependency>
				<groupId>es.nivel36</groupId>
				<artifactId>laie-web</artifactId>
				<version>${laie.version}</version>
				<type>war</type>
				<scope>compile</scope>
			</dependency>

			<dependency>
				<groupId>es.nivel36</groupId>
				<artifactId>nivel36-login-ejb</artifactId>
				<version>${laie.version}</version>
				<type>ejb</type>
			</dependency>
			
			<dependency>
				<groupId>es.nivel36</groupId>
				<artifactId>nivel36-login-jsf</artifactId>
				<version>${laie.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.pdfbox</groupId>
				<artifactId>pdfbox</artifactId>
				<version>${pdfbox.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${commons-fileupload.version}</version>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-hibernate5</artifactId>
				<version>${jackson-datatype-hibernate5.version}</version>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-inline</artifactId>
				<version>${version.mockito}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${version.mockito}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>${version.mockito}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-ejb-plugin</artifactId>
					<version>${maven.ejb.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-ear-plugin</artifactId>
					<version>${maven.ear.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>${maven.war.plugin.version}</version>
					<configuration>
						<failOnMissingWebXml>false</failOnMissingWebXml>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
